# BeveragesApp

./: .replit  main.py  pyproject.toml
templates/: add_beer.html  add_brand.html  add_location.html  add_price.html  add_reward.html  admin_panel.html  base.html  beers.html  brands.html  cadastrar_cerveja.html  cadastrar_local.html  cadastro.html  cervejas.html  change_password.html  dashboard.html  edit_price.html  edit_reward.html  forgot_password.html  index.html  locais.html  locations.html  login.html  manage_rewards.html  manage_users.html  pontos.html  profile.html  register.html  reportar_preco.html  reset_password.html  rewards.html
templates/admin/: add_reward.html  add_role.html  dashboard.html  edit_points.html  edit_reward.html  edit_role.html  edit_user.html  points.html  rewards.html  roles.html  users.html
